# MotionSenseHRV4

DeviceOS/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
DeviceOS/src/: main.cc  storage.c
littlefs/: prj.conf
littlefs/src/: main.c
mass/: CMakeLists.txt  prj.conf
mass/src/: main.c
mass/src/filesystem/: zephyrfilesystem.c  zephyrfilesystem.h
mass_defaultunedited/: prj.conf
mass_defaultunedited/boards/: nrf5340dk_nrf5340_cpuapp.overlay
mass_defaultunedited/src/: main.c
mass_defaultunedited/src/filesystem/: zephyrfilesystem.c  zephyrfilesystem.h
spi_flash/: CMakeLists.txt  nand_flash.c  nand_ftl_diskio.h  nrf5340dk_nrf5340_cpuapp.overlay  pm_static.yml  prj.conf  raw_nand_driver1.c
spi_flash/boards/: nrf5340dk_nrf5340_cpuapp.conf
spi_flash/dts/bindings/: senselab,nanddisk.yaml  vnd,customflash.yaml
spi_flash/other/: spi_nand1.c
spi_flash/src/: custom_nor_driver.c  file_mount.c  main.c  spi_conn.c
spi_flash/src/drivers/: CMakeLists.txt  Kconfig  nand_disk.c  nand_disk.h  nand_flash.c  raw_nand_driver1.c  spi_nand.c  spi_nand.h  spi_nor.c
storage_upload/: walk.py
